--- a/package.json
+++ b/package.json
@@ -1,34 +1,14 @@
 {
   "name": "warrior",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
+  "version": "1.1.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "pnpm --filter backend run start",
+    "dev": "pnpm --parallel run dev",
+    "build": "pnpm run --filter frontend build"
   },
-  "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.743.0",
-    "bootstrap-icons": "^1.11.3",
-    "classnames": "^2.5.1",
-    "prop-types": "^15.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.3",
-    "react-toastify": "^11.0.3"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0"
-  }
+  "keywords": [],
+  "author": "Bohan Cheng",
+  "license": "Apache-2.0"
 }
