--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock": "^3.773.0",
     "@aws-sdk/client-bedrock-runtime": "^3.743.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
