--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,5 @@ VITE_MAX_WEBSOCKET_RETRY=3
 VITE_WEBSOCKET_RETRY_INTERVAL=100
 VITE_WS_DEV_ROUTE='ws://localhost:3000/api/ws'
 VITE_WS_PROD_ROUTE='/api/ws'
+VITE_DEV_BASE_ROUTE='http://localhost:3000/api'
+VITE_PROD_BASE_ROUTE='/api'
